# brAIn

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  docker-compose.yml  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  run  vitest.config.ts
nodes/chat/: config.json  package.json
nodes/chat/src/: handler.ts
nodes/chat/ui/: index.html
nodes/gaze/: README.md
nodes/gaze/server/: README.md  pyproject.toml  requirements.txt
nodes/gaze/server/app/: api.py  config.py  engine.py  gaze.py  gazelle.py  main.py  models.py  profiles.py  recognizer.py  setup_models.py
nodes/gaze/web/: index.html  package.json  (+2 more)
nodes/llm-basic/: config.json  package.json
nodes/llm-cli/: config.json  package.json
nodes/memory/: config.json  package.json
nodes/memory-consolidator/: config.json  package.json
nodes/memory-proxy/: config.json  package.json
nodes/memory-vector/: config.json  package.json
nodes/reminder/: config.json  package.json
nodes/voice/: .gitignore  README.md  config.json  package.json
seeds/: chat.yaml  default.yaml  stress-test.yaml
tests/: brain-node.test.ts  bus.test.ts  developer.test.ts  dynamic-scanner.test.ts  e2e-budget.test.ts  e2e-consolidator.test.ts  e2e-multi-service.test.ts  e2e-secret.test.ts  e2e-workflows.test.ts  http-bridge-handler.test.ts  integration.test.ts  llm.test.ts  memory-handler.test.ts  memory-vector-handler.test.ts  memory-vector-integration.test.ts  message-formatter.test.ts  registry.test.ts  runner-resilience.test.ts  runner.test.ts  tool-parser.test.ts  type-validator.test.ts
(+49 files in other folders)
