[project]
name = "gaze-server"
version = "0.1.0"
description = "Face detection + recognition + gaze direction via InsightFace + Moondream"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = ["E501"]
